# tomlraider

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  _traceback.py  _typos.toml  pyproject.toml  pyrightconfig.json  ruff.toml  tox.ini
.github/workflows/: main.yml
src/tomlraider/: __init__.py  __main__.py  _main.py  ansi.py  cli.py  core.py  main.py  prettyparser.py
tests/: __init__.py  default_test.py  raider_test.py
tests/assets/invalid/control/: bare-formfeed.toml  bare-vertical-tab.toml  comment-cr.toml  comment-ff.toml  multi-cr.toml  rawmulti-cd.toml  rawstring-cr.toml  string-cr.toml
tests/assets/invalid/encoding/: bad-utf8-at-end.toml
tests/assets/invalid/inline-table/: duplicate-key-3.toml  linebreak-1.toml  overwrite-07.toml  overwrite-08.toml
tests/assets/invalid/key/: without-value-4.toml
tests/assets/invalid/local-datetime/: feb-30.toml
tests/assets/invalid/string/: bad-escape-2.toml  literal-multiline-quotes-1.toml  multiline-bad-escape-1.toml  multiline-bad-escape-3.toml  multiline-no-close-5.toml
tests/assets/invalid/table/: append-with-dotted-keys-1.toml  no-close-1.toml
tests/assets/valid/comment/: noeol.toml  tricky.toml
tests/assets/valid/key/: case-sensitive.toml  dotted-3.toml  dotted-4.toml  special-word.toml  start.toml
tests/assets/valid/string/: multiline-empty.toml  multiline.toml
