#####################################################
# Project Metadatas
#####################################################
[project]
name = "tomlraider"
description = "A cli program retrieving properties from .toml files."
authors = [{ name = "Gilles Coissac", email = "gilles@ideographe.fr" }]
license = { text = "GPL-3.0" }
requires-python = ">=3.11"
dependencies = ["argcomplete>=3.3.0"]
readme = "README.md"
keywords = ["toml", "cli", "configuration"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/gravures/tomlraider"
source   = "https://github.com/gravures/tomlraider"

[project.scripts]
tomlraider = "tomlraider.cli:main"

#####################################################
# PDM
#####################################################
[build-system]
requires      = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source         = "scm"
write_to       = "tomlraider/_version.py"
write_template = "__version__ = '{}'"

[tool.pdm.build]
editable-backend = "editables"

[tool.pdm.dev-dependencies]
dev = [
  "ruff==0.4.1",
  "basedpyright==1.10.3",
  "pre-commit==3.7.0",
  "tox-pdm>=0.7.2",
  "dead>=1.5.2",
]
test = ["pytest", "hypothesis", "coverage[toml]", "tox>=4.0", "dm-tree>=0.1.8"]

[tool.pdm.scripts]
xrequire    = "pdm export -f requirements -o requirements.txt"
test        = "pytest -s -v -k {args}"
test_all    = "coverage run -m pytest"
test_typing = "pdm run basedpyright --stats ./src/tomlraider"
test_cover  = "coverage report"
tox_testme  = "tox --develop -r -e py"
pc_init     = "pre-commit install"
pc_update   = "pre-commit autoupdate"
pc_check    = { env = { "SKIP" = "basedpyright" }, cmd = "pre-commit run --all-files" }
dead        = "dead"
pc_clean    = "pre-commit clean && pre-commit gc"
deps        = "pdm list --fields name,groups,version,licenses,homepage --sort groups,name,licenses --exclude :sub"

[tool.pdm.scripts.pc_safety]
composite = ["require", "pre-commit run python-safety-dependencies-check"]
